--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.8.4",
+    "pino": "^9.5.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
